<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_animation"
    android:id="@+id/myLayoutSettings"
    tools:context=".SettingsActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/tv_user_email"
            android:layout_width="313dp"
            android:layout_height="103dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <Button
            android:id="@+id/change_password"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_style"
            android:drawableLeft="@drawable/ic_verified_user_black_24dp"
            android:text="@string/btn_reset_password"
            android:textColor="@color/white"
            android:textSize="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_password" />

        <Button
            android:id="@+id/remove_user"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_style"
            android:drawableLeft="@drawable/ic_delete_black_24dp"
            android:text="@string/remove_user"
            android:textColor="@color/white"
            android:textSize="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/change_password" />

        <Button
            android:id="@+id/sign_out"
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="220dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_style"
            android:drawableLeft="@drawable/ic_exit_to_app_black_24dp"
            android:text="@string/btn_sign_out"
            android:textColor="@color/white"
            android:textSize="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/remove_user"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/new_password"
            android:layout_width="279dp"
            android:layout_height="47dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:drawableLeft="@drawable/ic_https_black_24dp"
            android:ems="10"
            android:hint="@string/title_new_password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="17dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_email" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>